Fri Aug 16 12:43:09 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	+ src/tds/convert.c: rewritten string_to_numeric:
	- improved performance
	- do not allocated unneeded and unchecked buffers
	- work with not terminated string
	- remove buffer overflow if number too long
	- check for numeric overflow
	+ src/tds/unittests/t0008.c: (new)
	- test numeric results

Fri Aug 16 10:26:12 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	+ src/tds/convert.c:
	- rewritten tds_atoi (to string_to_int), because atoi
	return 0 on bad string (such as "foo"), also work on
	unterminated string and do test on number overflow
	- check for overflow converting between int types
	- add test check to test conversion from char to int

Fri Aug 16 08:05:42 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	+ src/tds/convert.c: converting from bit:
	- return correct values
	- added terminator to returned string
	- return TDS_FAIL if failure

Fri Aug 16 07:51:38 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	+ src/tds/convert.c:
	- add VARCHAR to convert table
	- removed some unused variable and declaration
	- return correct value converting from binary to char
	- do not treat NVARCHAR like VARCHAR
	- added some memory allocation tests

Fri Aug 16 07:41:07 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	+ src/tds/convert.c:
	- add conversion from int to bit
	- add conversion from int to money
	- add conversion from money to bit

Fri Aug 16 07:05:32 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	+ src/dblib/dblib.c: fix small buffer overflow
	+ src/ctlib/unittests/t0003.c:
	- initialize string value (needed by following strcat)

Sun Aug 11 12:36:40 EDT 2002	Brian Bruns <camber@ais.org>
	+ include/tds.h.in: add include config.h

Thu Aug  8 22:02:01 EDT 2002	Brian Bruns <camber@ais.org>
	+ src/ctlib/cs.c: set context parent
	+ src/ctlib/ctutil.c: call context handler if conn not set
	+ src/dblib/dblib.c: set context parent
	+ src/odbc/odbc.c: set context parent