@@ -1,3 +1,9 @@
+Fri Aug 16 14:22:19 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
+	+ src/tds/login.c:
+	- send username/password if not domain
+	- do not send dummy authentication structure
+	- return correct result from tds7_send_login
+
 Fri Aug 16 12:43:09 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
 	+ src/tds/convert.c: rewritten string_to_numeric:
 	- improved performance
